2002-06-26  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* lisp/imap.el (imap-ssl-open-2): Do away with w32-related
	workaround I installed on 1999-12-28, i.e. also call
	`as-binary-process' in windows-nt.

2002-06-23  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* lisp/pop3.el (pop3-open-ssl-stream): Do away with w32-related
	workaround I installed on 1999-12-27, i.e. also call
	`as-binary-process' in windows-nt.

2002-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 02.

	* lisp/gnus-msg.el (gnus-message-setup-hook): Default to nil.
	(gnus-setup-message): Run `gnus-maybe-setup-default-charset'.
	(gnus-summary-supersede-article): Don't bind the value for
	`gnus-message-setup-hook'.
	(gnus-summary-resend-bounced-mail): Ditto.

2002-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/pop3.el: Add a comment for the use of `ssl' or `tls'
	connection with Gnus; always require `pces' and `path-util' for
	Gnus.
	(pop3-open-ssl-stream-1): Don't require `path-util' here.

2002-06-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/pop3.el: Make it can be byte-compiled in the Gnus source
	tree with neither errors nor warnings.
	(pop3-md5): Fix the logic to check whether the built-in `md5'
	allows the 4th argument CODING-SYSTEM.

2002-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

	* contrib/gpg-ring.el: Remove RCS magic cookie.
	* lisp/nnir.el: Ditto.
	* lisp/sieve-manage.el: Ditto.
	* lisp/sieve-mode.el: Ditto.

	* texi/ptexinfmt.el (texinfo-discard-command-and-arg): New
	function.

2002-06-03  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* texi/ptexinfmt.el: discard @cartouche.  @anchor discard for Mule
	2.3.  Support @., @:, @-.
	(texinfo-format-inforef): New function.

2002-04-30  Daiki Ueno  <ueno@unixuser.org>

	* lisp/message.el (message-expand-name-function): New user option.
	(message-expand-name): Use it.